incubator/k8s-nw/my-app/templates/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-on-master
  labels:
    app: nginx
    node: vagrant
spec:
  nodeName: vagrant  # Schedule on the control-plane node
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
  - name: busybox
    image: busybox
    imagePullPolicy: IfNotPresent
    command: [ "sh", "-c", "sleep infinity" ]
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox-on-master
  labels:
    app: busybox
    node: vagrant
spec:
  nodeName: vagrant  # Schedule on the control-plane node
  containers:
  - name: busybox
    image: busybox
    imagePullPolicy: IfNotPresent
    command: [ "sh", "-c", "sleep infinity" ]
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-on-worker
  labels:
    app: nginx
    node: worker
spec:
  nodeName: worker  # Schedule on the worker node
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
  - name: busybox
    image: busybox
    imagePullPolicy: IfNotPresent
    command: [ "sh", "-c", "sleep infinity" ]
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox-on-worker
  labels:
    app: busybox
    node: worker
spec:
  nodeName: worker  # Schedule on the worker node
  containers:
  - name: busybox
    image: busybox
    imagePullPolicy: IfNotPresent
    command: [ "sh", "-c", "sleep infinity" ]
