incubator/k8s-nw/my-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80          # Cluster-internal port
      targetPort: 80    # Pod's port
      nodePort: 30075   # External port (auto-assign if omitted)
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: nginx-loadbalancer
#spec:
#  type: LoadBalancer
#  selector:
#    app: nginx
#  ports:
#    - protocol: TCP
#      port: 80        # Cluster-internal port
#      targetPort: 80  # Pod's port
#      nodePort: 30080 # Optional: Auto-assign if omitted
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: nginx-external
#  namespace: default
#spec:
#  type: ExternalName
#  externalName: nginx-loadbalancer.default.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip-master
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: nginx
    node: vagrant
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport-master
spec:
  type: NodePort
  selector:
    app: nginx
    node: vagrant
  ports:
    - protocol: TCP
      port: 80          # Cluster-internal port
      targetPort: 80    # Pod's port
      nodePort: 30085   # External port (auto-assign if omitted)
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip-worker
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: nginx
    node: worker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport-worker
spec:
  type: NodePort
  selector:
    app: nginx
    node: worker
  ports:
    - protocol: TCP
      port: 80          # Cluster-internal port
      targetPort: 80    # Pod's port
      nodePort: 30090   # External port (auto-assign if omitted)
