incubator/k8s-nw/my-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  #tls:
  #  - hosts:
  #      - my-app.mitkar.io
  #    secretName: my-secret  # Kubernetes secret containing TLS certs
  rules:
    - host: my-app.mitkar.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-clusterip
                port:
                  number: 80
